--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.18",
     "vue": "^3.2.13",
     "vue-router": "^4.0.16"
   },
