--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
