--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "moment": "^2.29.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.16"
   },
