--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bootstrap-vue": "^2.22.0",
+    "cookie-parser": "^1.4.6",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-<<<<<<< HEAD
+    "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.18",
-=======
-    "moment": "^2.29.3",
->>>>>>> devEuphra
     "vue": "^3.2.13",
     "vue-router": "^4.0.16"
   },
