--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "moment": "^2.29.3",
+    "mysql": "^2.18.1",
     "vue": "^3.2.13",
+    "vue-axios-cors": "^1.0.1",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
